--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.32.2"
   }
 }
